change name of OdbDesignLib target to "OdbDesign" so that the output file is named more nicer, i.e. libOdbDesign.so and OdbDesign.dll

--- a/OdbDesignLib/CMakeLists.txt
+++ b/OdbDesignLib/CMakeLists.txt
@@ -2,11 +2,11 @@
 # project specific logic here.
 #
 
-add_library(OdbDesignLib SHARED "OdbDesignLib.cpp" "OdbDesignLib.h" "export.h" "ComponentLayer.cpp" "ComponentLayer.h" "EdaData.cpp" "EdaData.h" "Layer.cpp" "Layer.h" "Netlist.cpp" "Netlist.h" "OdbDesign.cpp" "OdbDesign.h" "Step.cpp" "Step.h" "string_trim.h")
+add_library(OdbDesign SHARED "OdbDesignLib.cpp" "OdbDesignLib.h" "export.h" "ComponentLayer.cpp" "ComponentLayer.h" "EdaData.cpp" "EdaData.h" "Layer.cpp" "Layer.h" "Netlist.cpp" "Netlist.h" "OdbDesign.cpp" "OdbDesign.h" "Step.cpp" "Step.h" "string_trim.h")
 
 # state that anybody linking to us needs to include the current source dir
 # to find MathFunctions.h, while we don't.
-target_include_directories(OdbDesignLib
+target_include_directories(OdbDesign
                            INTERFACE
                             $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                             $<INSTALL_INTERFACE:include>
@@ -14,4 +14,4 @@ target_include_directories(OdbDesignLib
 
 # define the symbol stating we are using the declspec(dllexport) when
 # building on windows
-target_compile_definitions(OdbDesignLib PRIVATE "EXPORTING_ODBDESIGNLIB")
+#target_compile_definitions(OdbDesign PRIVATE "EXPORTING_ODBDESIGNLIB")
