--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,11 @@
 cmake_minimum_required (VERSION 3.15)
 
 # require C++0x17 compiler
-set(CMAKE_CXX_STANDARD 17)
+set(MY_CXX_STANDARD 17)
+set(CXX_STANDARD ${MY_CXX_STANDARD})
+set(CMAKE_CXX_STANDARD ${MY_CXX_STANDARD})
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+#set(CXX_STANDARD_REQUIRED True)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
