use ref_name variable

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -66,8 +66,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            ${{ github.ref }}-${{ github.run_number }} 
-            ${{ github.ref }}-latest
+            ${{ github.ref_name }}-${{ github.run_number }} 
+            ${{ github.ref_name }}-latest
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
