--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,8 +10,8 @@ on:
     branches: [ "*" ]
     # Publish semver tags as releases.
     #tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "*" ]
+  #pull_request:
+  #  branches: [ "*" ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -73,9 +73,9 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
+        uses: docker/build-push-action
         with:
-          context: .
+          context: .          
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
