--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,11 +8,7 @@ name: Docker Publish
 on:
   push:
     branches: [ "*" ]
-    # Publish semver tags as releases.
-    #tags: [ 'v*.*.*' ]
-  #pull_request:
-  #  branches: [ "*" ]
-
+   
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
@@ -73,7 +69,7 @@ jobs:
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action
+        uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .          
           push: ${{ github.event_name != 'pull_request' }}
