--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /out
 OdbDesignLib/OdbDesignLib_wrap.cxx
 swig/PyOdbDesignLib.py
+PyOdbDesignLib/dist/pyodbdesignlib-0.0.1-py3-none-any.whl
+PyOdbDesignLib/dist/pyodbdesignlib-0.0.1.tar.gz
+PyOdbDesignLib/_PyOdbDesignLib.dll
+PyOdbDesignLib/PyOdbDesignLib.py
