ignore .pyd file

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ PyOdbDesignLib/dist/pyodbdesignlib-0.0.1-py3-none-any.whl
 PyOdbDesignLib/dist/pyodbdesignlib-0.0.1.tar.gz
 PyOdbDesignLib/_PyOdbDesignLib.dll
 PyOdbDesignLib/PyOdbDesignLib.py
+PyOdbDesignLib/_PyOdbDesignLib.pyd
