--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ PyOdbDesignLib/dist/pyodbdesignlib-0.0.1.tar.gz
 PyOdbDesignLib/_PyOdbDesignLib.dll
 PyOdbDesignLib/PyOdbDesignLib.py
 PyOdbDesignLib/_PyOdbDesignLib.pyd
+PyOdbDesignLib/__pycache__/
