--- a/PyOdbDesignLib/pyproject.toml
+++ b/PyOdbDesignLib/pyproject.toml
@@ -14,7 +14,8 @@ requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+    #"Operating System :: OS Independent",
+    "Operating System :: POSIX :: Linux",
 ]
 keywords = [
     "Odb",
