run package build and upload from PyOdbDesignLib subdirectory and run on push to release branch

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,6 +11,9 @@ name: Upload Python Package
 on:
   release:
     types: [published]
+  push:
+    branches:
+      - release
 
 permissions:
   contents: read
@@ -19,6 +22,9 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: PyOdbDesignLib
 
     steps:
     - uses: actions/checkout@v3
@@ -36,4 +42,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        password: ${{ secrets.PYPI_API_TOKEN_PYODBDESIGNLIB }}
