add OneDrive to linux paths

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ OdbDesignServer/db.sqlite3
 OdbDesignServer/Scripts/
 OdbDesignServer/api/__pycache__/
 OdbDesignServer/PyOdbDesignLib/
+/cmake-build-debug
