add OdbDesignServer target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,10 @@ else()
 endif()
 
 # Include sub-projects.
-add_subdirectory("OdbDesignApp")
 add_subdirectory("OdbDesignLib")
+add_subdirectory("OdbDesignApp")
+add_subdirectory("OdbDesignServer")
 
 # link to OdbDesign library in both executable targets
 target_link_libraries(OdbDesignApp PUBLIC OdbDesign)
-target_link_libraries(OdbDesignApp PUBLIC OdbDesign)
+target_link_libraries(OdbDesignServer PUBLIC OdbDesign)
