--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,13 @@ endif()
 
 project ("OdbDesign")
 
-if (MSVC)
-    # control where the static and shared libraries are built so that on windows
-    # we don't need to tinker with the path to run the executable
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
-endif()
+#if (false AND MSVC)
+#    # control where the static and shared libraries are built so that on windows
+#    # we don't need to tinker with the path to run the executable
+#    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+#    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+#    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
+#endif()
 
 # increase warnings in a compiler-specific manner
 if (MSVC)
