--- a/OdbDesignServer/CMakeLists.txt
+++ b/OdbDesignServer/CMakeLists.txt
@@ -1,4 +1,13 @@
-﻿add_executable(OdbDesignServer "OdbDesignServer.cpp" "OdbDesignServer.h")
+﻿# CMakeList.txt : CMake project for OdbDesignServer
+#
+
+add_executable(OdbDesignServer "OdbDesignServer.cpp" "OdbDesignServer.h" "Controllers/RouteController.h" "Controllers/RouteController.cpp" "Controllers/HelloWorldController.h" "Controllers/HelloWorldController.cpp" "StepsEdaDataController.h" "StepsEdaDataController.cpp"   "OdbDesignServerApp.h" "OdbDesignServerApp.cpp")
+
+# link to Crow
+#set(CROW_FEATURES ssl compression)
+#set(CROW_FEATURES "ssl;compression")
+find_package(Crow REQUIRED)
+target_link_libraries(OdbDesignServer PUBLIC Crow::Crow)
 
 # copy templates directory to output directory 
 add_custom_command(
