--- a/OdbDesignServer/CMakeLists.txt
+++ b/OdbDesignServer/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt : CMake project for OdbDesignServer
 #
 
-add_executable(OdbDesignServer "OdbDesignServer.cpp" "OdbDesignServer.h" "Controllers/RouteController.h" "Controllers/RouteController.cpp" "Controllers/HelloWorldController.h" "Controllers/HelloWorldController.cpp"     "OdbDesignServerApp.h" "OdbDesignServerApp.cpp" "Controllers/StepsEdaDataController.cpp" "Controllers/StepsEdaDataController.h")
+add_executable(OdbDesignServer "main.cpp"  "Controllers/RouteController.h" "Controllers/RouteController.cpp" "Controllers/HelloWorldController.h" "Controllers/HelloWorldController.cpp"     "OdbDesignServerApp.h" "OdbDesignServerApp.cpp" "Controllers/StepsEdaDataController.cpp" "Controllers/StepsEdaDataController.h")
 
 # link to Crow
 #set(CROW_FEATURES ssl compression)
@@ -9,16 +9,19 @@ add_executable(OdbDesignServer "OdbDesignServer.cpp" "OdbDesignServer.h" "Contro
 find_package(Crow REQUIRED)
 target_link_libraries(OdbDesignServer PUBLIC Crow::Crow)
 
+# TODO: add POST_BUILD commands for Linux (dest. directory will be ${CMAKE_CURRENT_BINARY_DIR})
 # copy templates directory to output directory 
 add_custom_command(
         TARGET OdbDesignServer POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
                 ${CMAKE_SOURCE_DIR}/OdbDesignServer/templates
-                ${CMAKE_CURRENT_BINARY_DIR}/templates)
+                #${CMAKE_CURRENT_BINARY_DIR}/templates)
+                ${PROJECT_BINARY_DIR}/templates)
 
 # copy designs directory to output directory 
 add_custom_command(
         TARGET OdbDesignServer POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
                 ${CMAKE_SOURCE_DIR}/OdbDesignServer/designs
-                ${CMAKE_CURRENT_BINARY_DIR}/designs)
+                #${CMAKE_CURRENT_BINARY_DIR}/designs)
+                ${PROJECT_BINARY_DIR}/designs)
