--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt : CMake project for OdbDesignServer
 #
 
-add_library(Utils SHARED "export.h" "Utils.cpp" "Utils.h" "ExitCode.h" "ThreadSafeQueue.h" "WorkQueueLoopThread.h" "Logger.h" "Logger.cpp")
+add_library(Utils SHARED "export.h" "Utils.cpp" "Utils.h" "ExitCode.h" "ThreadSafeQueue.h" "WorkQueueLoopThread.h" "Logger.h" "Logger.cpp" "CommandLineArgs.h" "CommandLineArgs.cpp")
 
 # state that anybody linking to us needs to include the current source dir,
 # while we don't.
