--- a/OdbDesignLib/CMakeLists.txt
+++ b/OdbDesignLib/CMakeLists.txt
@@ -1,13 +1,12 @@
 ﻿# CMakeList.txt : CMake project for OdbDesignLib
 #
 
-add_library(OdbDesign SHARED "export.h" "ComponentLayerDirectory.cpp" "ComponentLayerDirectory.h" "EdaDataFile.cpp" "EdaDataFile.h" "LayerDirectory.cpp" "LayerDirectory.h" "NetlistFile.cpp" "NetlistFile.h" "FileArchive.cpp" "FileArchive.h" "StepDirectory.cpp" "StepDirectory.h" "Net.h" "Net.cpp" "Component.h" "Component.cpp" "Pin.h" "Pin.cpp" "PinConnection.h" "PinConnection.cpp" "Package.h" "Package.cpp" "Part.h" "Part.cpp" "Via.h" "Via.cpp" "Design.h" "Design.cpp" "BoardSide.h" "OdbDesign.h" "DesignCache.h" "DesignCache.cpp" "CrowReturnable.h" "CrowReturnable.cpp" "win.h"   "proto/edadatafile.pb.h" "proto/edadatafile.pb.cc" "PbMessage.h" "PbMessage.cpp" "IProtoBuffable.h" "IProtoBuffable.cpp")
+add_library(OdbDesign SHARED "export.h" "ComponentLayerDirectory.cpp" "ComponentLayerDirectory.h" "EdaDataFile.cpp" "EdaDataFile.h" "LayerDirectory.cpp" "LayerDirectory.h" "NetlistFile.cpp" "NetlistFile.h" "FileArchive.cpp" "FileArchive.h" "StepDirectory.cpp" "StepDirectory.h" "Net.h" "Net.cpp" "Component.h" "Component.cpp" "Pin.h" "Pin.cpp" "PinConnection.h" "PinConnection.cpp" "Package.h" "Package.cpp" "Part.h" "Part.cpp" "Via.h" "Via.cpp" "Design.h" "Design.cpp" "BoardSide.h" "OdbDesign.h" "DesignCache.h" "DesignCache.cpp"   "win.h"   "proto/edadatafile.pb.h" "proto/edadatafile.pb.cc" "PbMessage.h" "PbMessage.cpp" "IProtoBuffable.h" "IProtoBuffable.cpp" "IJsonConvertable.h" "IJsonConvertable.cpp" "crow_win.h")
 
 # required for SWIG
 set_property(TARGET OdbDesign PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-# state that anybody linking to us needs to include the current source dir,
-# while we don't.
+# state that anybody linking to us needs to include the current source dir, while we don't.
 target_include_directories(OdbDesign
                            INTERFACE
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
@@ -18,7 +17,6 @@ find_package(Protobuf CONFIG REQUIRED)
 #protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS protoc/edadatafile.proto)
 #target_link_libraries(OdbDesign PUBLIC protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite)
 target_link_libraries(OdbDesign PUBLIC protobuf::libprotobuf)
-#target_include_directories(OdbDesign PRIVATE ${Protobuf_INCLUDE_DIRS})
 # mark the generated Protofbuf C++ files as generated
 #set_source_files_properties(${PROTO_SRC} ${PROTO_HDRS} PROPERTIES GENERATED TRUE)
 # add the generated Protobuf C++ files to the target
