add zlib as a vcpkg package, cmake project for Crwo HTTP compression

--- a/OdbDesignServer/CMakeLists.txt
+++ b/OdbDesignServer/CMakeLists.txt
@@ -1,12 +1,14 @@
 ﻿# CMakeList.txt : CMake project for OdbDesignServer
 #
 
-add_executable(OdbDesignServer "main.cpp"  "Controllers/RouteController.h" "Controllers/RouteController.cpp" "Controllers/HelloWorldController.h" "Controllers/HelloWorldController.cpp"     "OdbDesignServerApp.h" "OdbDesignServerApp.cpp" "Controllers/StepsEdaDataController.cpp" "Controllers/StepsEdaDataController.h" "OdbDesignServer.h")
+add_executable(OdbDesignServer "main.cpp" "Controllers/RouteController.h" "Controllers/RouteController.cpp" "Controllers/HelloWorldController.h" "Controllers/HelloWorldController.cpp"     "OdbDesignServerApp.h" "OdbDesignServerApp.cpp" "Controllers/StepsEdaDataController.cpp" "Controllers/StepsEdaDataController.h" "OdbDesignServer.h")
+
+# link to zlib (required for Crow HTTP compression)
+find_package(ZLIB REQUIRED)
+target_link_libraries(OdbDesignServer PRIVATE ZLIB::ZLIB)
 
 # link to Crow
-#set(CROW_FEATURES ssl compression)
-#set(CROW_FEATURES "ssl;compression")
-#set(CROW_FEATURES compression)
+add_compile_definitions(CROW_ENABLE_COMPRESSION)
 find_package(Crow CONFIG REQUIRED)
 target_link_libraries(OdbDesignServer PRIVATE Crow::Crow)
 
